--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Analytica Architecture
+name: Analytica Service 2
 
 env:
-  AZURE_WEBAPP_NAME: analytica-architecture
+  AZURE_WEBAPP_NAME: analytica-ms-service2
   AZURE_WEBAPP_PACKAGE_PATH: '.'
   PYTHON_VERSION: '3.7'
 
